@@ -18,10 +18,10 @@ DIST_SUBDIRS= \
 	plugin \
 	test
 
-ACLOCAL_FLAGS = -I m4
+#ACLOCAL_FLAGS = -I m4
 
 EXTRA_DIST=depcomp AUTHORS COPYING README RELEASE ChangeLog autogen.sh swfdec.spec \
-	TODO m4/as-ac-expand.m4 m4/as-libtool.m4 m4/as-version.m4
+	TODO
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = swfdec-@SWFDEC_MAJORMINOR@.pc
