@@ -1,4 +1,8 @@
+if HAVE_GIMP
 gimpdir = $(gimplibdir)/plug-ins
+else
+gimpdir = 
+endif
 
 INCLUDES = $(SWF_CFLAGS)\
 	$(LIBGIMP_CFLAGS)\
@@ -14,9 +18,3 @@ swf_SOURCES=swf-gimp.c
 swf_LDFLAGS = -no-undefined -avoid-version -module
 swf_LDADD = $(LIBGIMP_LIBS) $(SWF_LIBS)
 
-if HAVE_GIMP
-install-%: %
-	$(mkinstalldirs) $(gimpdir)
-else
-install-%: %
-endif
